--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -1,5 +1,6 @@
 {
-    "pageTitle": "HELLO",
+    "pageTitle": "LESSON PLANS",
+    "listTitle": "Lessons",
     "footer": {
         "about": "About",
         "howto": "How to use"
@@ -13,53 +14,53 @@
         "materialType": "Type of material"
     },
     "filterOptions": {
-        "topic": {
-            "argumentation": "Argumentation and reasoning",
-            "case": "Case building",
-            "evidence": "Empirical evidence and knowledge",
-            "games": "Exercises and debate club games",
-            "intro": "Introduction to debate and debate formats",
-            "analysis": "Non-argumentative analysis",
-            "public_speaking": "Public speaking",
-            "critical_thinking": "Critical thinking",
-            "motion_analysis": "Motion analysis",
-            "teacher_development": "Coach/teacher development",
-            "program_development": "Debate program development"
-        },
-        "materialType": {
-            "lesson": "Lesson plan",
-            "coaching": "Coaching guide",
-            "program": "Program guide",
-            "curriculum": "Curriculum"
-        },
-        "language": {
-            "EN": "English",
-            "HR": "Croatian",
-            "NL": "Dutch",
-            "SL": "Slovenian",
-            "SK": "Slovak",
-            "PL": "Polish"
-        },
-        "ageAndDifficulty": {
-            "advanced": "Advanced",
-            "intermediate": "Intermediate",
-            "beginner": "Beginner",
+        "argumentation": "Argumentation and reasoning",
+        "case": "Case building",
+        "evidence": "Empirical evidence and knowledge",
+        "games": "Exercises and debate club games",
+        "intro": "Introduction to debate and debate formats",
+        "analysis": "Non-argumentative analysis",
+        "public_speaking": "Public speaking",
+        "critical_thinking": "Critical thinking",
+        "motion_analysis": "Motion analysis",
+        "teacher_development": "Coach/teacher development",
+        "program_development": "Debate program development",
 
-            "under_14": "Under 14",
-            "between_14_and_19": "Between 14 and 19",
-            "over_19": "Over 19"
-        },
-        "duration": {
-            "45_min": "45 minutes",
-            "between_60_and_90 min": "60 - 90 minutes",
-            "over_90_min": "over 90 minutes"
-        },
-        "activityType": {
-            "2yr": "2-year debate program",
-            "1yr": "1-year debate program",
-            "6mo": "6-month debate program",
-            "short": "Short term debate program"
-        }
+        "lesson": "Lesson plan",
+        "coaching": "Coaching guide",
+        "program": "Program guide",
+        "curriculum": "Curriculum",
 
+        "EN": "English",
+        "HR": "Croatian",
+        "NL": "Dutch",
+        "SL": "Slovenian",
+        "SK": "Slovak",
+        "PL": "Polish",
+
+        "advanced": "Advanced",
+        "intermediate": "Intermediate",
+        "beginner": "Beginner",
+        "under_14": "Under 14",
+        "between_14_and_19": "Between 14 and 19",
+        "over_19": "Over 19",
+
+        "45_min": "45 minutes",
+        "between_60_and_90 min": "60 - 90 minutes",
+        "over_90_min": "over 90 minutes",
+
+        "2yr": "2-year debate program",
+        "1yr": "1-year debate program",
+        "6mo": "6-month debate program",
+        "short": "Short term debate program"
+    },
+    "lesson": {
+        "download": "Download lesson",
+        "similarLessons": "Similar lessons",
+        "back": "Back to the list"
+    },
+    "download": {
+        "instructions": "In order to download a lesson please tell us a few things about yourself. By submitting you agree to allow IDEA to process your data only in this way and for this purpose. Your data will be deleted after X days.",
+        "error": "Something has gone wrong. Please check that you filled out all the fields and that the email address you entered is valid."
     }
 }
